apps/db-meta/k8s/overlays/local/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dbmeta-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: web.local
    http:
      paths:
      - path: /dbapp(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: dbmeta-svc
            port:
              number: 8080
